// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <MapContainer
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    maxBounds={
      Array [
        Array [
          300,
          -300,
        ],
        Array [
          -300,
          300,
        ],
      ]
    }
    maxZoom={4}
    minZoom={1}
    tap={false}
    whenCreated={[Function]}
    zoom={1}
  >
    <ForwardRef(LeafComponent)
      noWrap={true}
      url="/tds-map-tiles/{z}/{x}/{y}.png"
    />
    <PostMarkers
      hiddenMarkerIds={Array []}
      map={
        Object {
          "setView": [MockFunction],
        }
      }
      markers={
        Object {
          "000": Object {
            "position": Object {
              "lat": 0,
              "lng": 0,
            },
            "title": "title",
          },
        }
      }
      popupDisabled={false}
    />
  </MapContainer>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests disabled map 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <MapContainer
    boxZoom={false}
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    doubleClickZoom={false}
    dragging={false}
    keyboard={false}
    maxBounds={
      Array [
        Array [
          300,
          -300,
        ],
        Array [
          -300,
          300,
        ],
      ]
    }
    maxZoom={4}
    minZoom={1}
    scrollWheelZoom={false}
    tap={false}
    touchZoom={false}
    whenCreated={[Function]}
    zoom={1}
    zoomControl={false}
  >
    <ForwardRef(LeafComponent)
      noWrap={true}
      url="/tds-map-tiles/{z}/{x}/{y}.png"
    />
  </MapContainer>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests when currentPosition state is setted 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <DialogScreen
    position="top"
    theme="black"
  >
    <ForwardRef(Typography)
      align="center"
      sx={
        Object {
          "fontWeight": "bold",
        }
      }
      variant="inherit"
    >
      マップ上の好きな位置をタップしてください。
    </ForwardRef(Typography)>
  </DialogScreen>
  <MapContainer
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    maxBounds={
      Array [
        Array [
          300,
          -300,
        ],
        Array [
          -300,
          300,
        ],
      ]
    }
    maxZoom={4}
    minZoom={1}
    tap={false}
    whenCreated={[Function]}
    zoom={1}
  >
    <ForwardRef(LeafComponent)
      noWrap={true}
      url="/tds-map-tiles/{z}/{x}/{y}.png"
    />
    <PostMarkers
      hiddenMarkerIds={Array []}
      map={
        Object {
          "setView": [MockFunction],
        }
      }
      markers={
        Object {
          "000": Object {
            "position": Object {
              "lat": 0,
              "lng": 0,
            },
            "title": "title",
          },
        }
      }
      popupDisabled={true}
    />
  </MapContainer>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests with initCenter prop 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <MapContainer
    center={
      Object {
        "lat": 1,
        "lng": 1,
      }
    }
    maxBounds={
      Array [
        Array [
          300,
          -300,
        ],
        Array [
          -300,
          300,
        ],
      ]
    }
    maxZoom={4}
    minZoom={1}
    tap={false}
    whenCreated={[Function]}
    zoom={1}
  >
    <ForwardRef(LeafComponent)
      noWrap={true}
      url="/tds-map-tiles/{z}/{x}/{y}.png"
    />
    <PostMarkers
      hiddenMarkerIds={Array []}
      map={
        Object {
          "setView": [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "lat": 1,
                  "lng": 1,
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        }
      }
      markers={
        Object {
          "000": Object {
            "position": Object {
              "lat": 0,
              "lng": 0,
            },
            "title": "title",
          },
        }
      }
      popupDisabled={false}
    />
  </MapContainer>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests with width and height props 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "height": 100,
      "width": 100,
    }
  }
>
  <MapContainer
    center={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    maxBounds={
      Array [
        Array [
          300,
          -300,
        ],
        Array [
          -300,
          300,
        ],
      ]
    }
    maxZoom={4}
    minZoom={1}
    tap={false}
    whenCreated={[Function]}
    zoom={1}
  >
    <ForwardRef(LeafComponent)
      noWrap={true}
      url="/tds-map-tiles/{z}/{x}/{y}.png"
    />
    <PostMarkers
      hiddenMarkerIds={Array []}
      map={
        Object {
          "setView": [MockFunction],
        }
      }
      markers={
        Object {
          "000": Object {
            "position": Object {
              "lat": 0,
              "lng": 0,
            },
            "title": "title",
          },
        }
      }
      popupDisabled={false}
    />
  </MapContainer>
</ForwardRef(Box)>
`;
